Adding support for delete query in File accessor